force-app/main/default/objects/cwbtool__FieldTrack__c/cwbtool__FieldTrack__c.object-meta.xml
<CustomObject>
    <label>Field Track</label>
    <nameField>
        <label>Field Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>