force-app/main/default/objects/cwbtool__FieldTrack__c/fields/cwbtool__IsCustom__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__IsCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom</label>
    <type>Checkbox</type>
</CustomField>