force-app/main/default/objects/cwbtool__FieldTrack__c/fields/cwbtool__ObjectLabel__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__ObjectLabel__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>