force-app/main/default/objects/cwbtool__FieldTrack__c/fields/cwbtool__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>