force-app/main/default/objects/cwbtool__FieldTrack__c/fields/cwbtool__Records__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Records__c</fullName>
    <label>Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>