force-app/main/default/objects/cwbtool__FieldTrack__c/fields/cwbtool__TotalFields__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__TotalFields__c</fullName>
    <label>Total Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>