force-app/main/default/objects/cwbtool__FieldTrack__c/listViews/cwbtool__All.listView-meta.xml
<ListView>
    <fullName>cwbtool__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>